operaciones binarias, unitarias y csv

--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
         <button onclick="operar('+')">+</button>
         <br>
         <button class="button-equals" onclick="calcular()">=</button>
+
+        <!-- Nuevos botones para operaciones CSV -->
+        <button id="sumatorio" onclick="sumatorio()">Sumatorio</button>
+        <button id="ordenar" onclick="ordenar()">Ordenar</button>
+        <button id="revertir" onclick="revertir()">Revertir</button>
+        <button id="quitar" onclick="quitar()">Quitar</button>
+
+        <!-- Elemento para mostrar información -->
+        <h2 id="info" class="grande" title="Info sobre el número">Info sobre el número</h2>
     </div>
 
     <!-- Enlazamos el archivo JavaScript -->
