--- a/index.html
+++ b/index.html
@@ -3,40 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora Básica</title>
-    <style>
-        .calculator {
-            width: 200px;
-            margin: 50px auto;
-        }
-        .display {
-            width: 100%;
-            height: 50px;
-            text-align: right;
-            font-size: 24px;
-        }
-        .buttons {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            grid-gap: 10px;
-        }
-        .button {
-            padding: 20px;
-            font-size: 18px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap">
+    <script src="scripts.js"></script>
+    <title>Calculadora</title>
 </head>
 <body>
     <div class="calculator">
         <input type="text" class="display" id="display" disabled>
         <div class="buttons">
+            <button class="button" onclick="appendNumber('7')">7</button>
+            <button class="button" onclick="appendNumber('8')">8</button>
+            <button class="button" onclick="appendNumber('9')">9</button>
+            <button class="button operator" onclick="chooseOperation('/')">/</button>
+            <button class="button" onclick="appendNumber('4')">4</button>
+            <button class="button" onclick="appendNumber('5')">5</button>
+            <button class="button" onclick="appendNumber('6')">6</button>
+            <button class="button operator" onclick="chooseOperation('*')">*</button>
             <button class="button" onclick="appendNumber('1')">1</button>
             <button class="button" onclick="appendNumber('2')">2</button>
             <button class="button" onclick="appendNumber('3')">3</button>
+            <button class="button operator" onclick="chooseOperation('-')">-</button>
+            <button class="button" onclick="appendNumber('0')">0</button>
+            <button class="button" onclick="appendComma()">,</button>
             <button class="button" onclick="clearDisplay()">C</button>
+            <button class="button operator" onclick="chooseOperation('+')">+</button>
+            <button class="button" onclick="calculate()">=</button>
+            <button class="button" onclick="elevarAlCuadrado()">x²</button>
+            <button class="button" id="modulo" onclick="mod()">|X|</button>
+            <button class="button" id="factorial" onclick="fact()">X!</button>
+            <button type="button" class="button special">Sumatorio</button>
+            <button type="button" class="button special">Ordenar</button>
+            <button type="button" class="button special">Revertir</button>
+            <button type="button" class="button special clear">Quitar</button>
+
         </div>
     </div>
-
-    <script src="../calculadora/script.js"></script>
+    <h2 id="info" class="grande" title="Info sobre el número">Info sobre el número</h2>
+    <script src="scripts.js"></script>
 </body>
 </html>
