--- a/index.html
+++ b/index.html
@@ -38,11 +38,10 @@
             <button class="button" onclick="elevarAlCuadrado()">x²</button>
             <button class="button" id="modulo" onclick="mod()">|X|</button>
             <button class="button" id="factorial" onclick="fact()">X!</button>
-            <button type="button" class="button special">Sumatorio</button>
-            <button type="button" class="button special">Ordenar</button>
-            <button type="button" class="button special">Revertir</button>
-            <button type="button" class="button special clear">Quitar</button>
-
+            <button class="button" id="sumatorio" onclick="sumatorio()">Sumatorio</button>
+            <button class="button" id="ordenar" onclick="ordenar()">Ordenar</button>
+            <button class="button" id="revertir" onclick="revertir()">Revertir</button>
+            <button class="button" id="quitar" onclick="quitar()">Quitar</button>
         </div>
     </div>
     <h2 id="info" class="grande" title="Info sobre el número">Info sobre el número</h2>
